Fixes headers and spacing.

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,13 +5,13 @@ body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16pt;
 	color: #333;
-	line-height: 1.5;
+	/* line-height: 1.5; */
 }
 body {
 	background-color: #fdfdfd;
 	margin: 0px auto; 
   position:relative;
-  max-width: 1200px;
+  width: 100%x;
 }
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
@@ -54,7 +54,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
+  /* height: 80px; */
   background-color: #252831;
   text-align:center;
 }
@@ -64,9 +64,9 @@ nav h1 {
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 18pt;
   font-weight: 200;
-  letter-spacing: 10px;
+  letter-spacing: 0.15em;
   text-transform: uppercase;
 }
 #breadcrumb {
